# norms-games

./: .gitignore  LICENSE  README.md  __init__.py  ngames.yml  pyproject.toml  requirements.txt  tox.ini  write.pl
.ipynb_checkpoints/: demo-checkpoint.ipynb
app/: app.py  app_agents.py  app_layout.py  app_rules.py  app_states.py  scrollable.py
demo/: _config.yml  _toc.yml  agents.ipynb
demo/.ipynb_checkpoints/: main-checkpoint.ipynb
docs/: interpreterdoc.tex  test.aux  test.idx  test.out  test.tex  writerdoc.tex
docs/doctrees/: environment.pickle  index.doctree  ngames.doctree
docs/html/: .buildinfo  genindex.html  index.html  ngames.html  objects.inv  search.html  searchindex.js
examples/: agents.pl  examples.ipynb  extensive_games.ipynb  extensive_games_example.ipynb  rules.pl  states.pl
examples/.ipynb_checkpoints/: aaai2021-demo-checkpoint.ipynb  examples-checkpoint.ipynb  extensive_games-checkpoint.ipynb  extensive_games_example-checkpoint.ipynb  fishing_game-checkpoint.ipynb  rules-checkpoint.pl
examples/adhoc/: adhoc.ipynb  agents.pl  rules.pl  states.pl
fishers_example_small/: norms.pl
ngames/: __init__.py  agents.pl  app_agents.py  app_main.py  app_rules_boundary.py  app_rules_choice.py  app_rules_control.py  app_rules_position.py  app_states.py  build.py  equilibrium.py  extensivegames-iMac de Nieves.py  extensivegames.py  general.pl  interpreter.pl  normalgames-iMac de Nieves.py  normalgames.py  play.py  rules.pl  states.pl  stochasticgames.py  test.py
norms-games/: build.py  extensivegames.py  general.pl  normalgames.py
(+125 files in other folders)
